# menubar

./: .gitignore  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  test-build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  tests.rs
src-tauri/src/commands/: categories.rs  mod.rs  orders.rs  products.rs  reports.rs  staff.rs
src/components/: Cart.tsx  ConfirmModal.tsx  DayCloseModal.tsx  DayClosing.tsx  Layout.tsx  LowStockAlert.tsx  OrderCard.tsx  PinModal.tsx  ProductForm.tsx  ProductGrid.tsx  SalesHistory.tsx  StaffSelector.tsx
src/hooks/: useTauri.ts
src/pages/: Dashboard.tsx  Products.tsx  Reports.tsx  Staff.tsx
src/styles/: globals.css
src/test/: businessLogic.test.ts  closeDay.test.ts  setup.ts  useTauri.test.ts
src/types/: index.ts
src/utils/: exportReport.ts
